pre_commit_hooks/kubernetes/kyverno/kyverno_test/tests/assets/correct-policy/config/tests/disallow-localhost-services/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-localhost-services
policies:
- ../../policies/disallow-localhost-services.yaml
resources:
- resource.yaml
results:
- kind: Service
  policy: disallow-localhost-services
  resources:
  - my-service
  result: fail
  rule: no-localhost-service
- kind: Service
  policy: disallow-localhost-services
  resources:
  - my-np-service
  result: skip
  rule: no-localhost-service
